week8/1.0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: robertom-kubernetes-demo
  labels:
    istio.io/rev: 1-6-14
