week8/3.0-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsite-app
  namespace: robertom-kubernetes-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebsite-app
  template:
    metadata:
      labels:
        app: mywebsite-app
    spec:
      containers:
        - name: mywebsite-app
          image: mroberto1808/nginx:1.1
