week8/7.0-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-svc
  namespace: robertom-kubernetes-demo
spec:
  selector:
    app: mywebsite-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
