week8/9.0-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mywebsite-app-vs
  namespace: robertom-kubernetes-demo
spec:
  hosts:
    - "robertom-playground-us-west-2-mesh-internal.dev.cwp.hpicorp.net"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /mywebsite
      route:
        - destination:
            host: mywebsite-svc.robertom-kubernetes-demo.svc.cluster.local
            port:
              number: 80
